*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9177 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/ar/foxtrick.properties
+++ b/content/locale/ar/foxtrick.properties
@@ -54,7 +54,6 @@ module.TransferDeadline.desc=يقوم بإضافة سطر إضافي لكل نت
 module.HTDateFormat.desc=يقوم بإضافة أسبوع هاتريك والموسم العالمي/المحلي إلى أهم التواريخ في صفحات هاتريك
 module.HTDateFormat.LocalSeason.desc=يقوم بعرض الموسم المحلي بدلا من الموسم العالمي
 module.HTDateFormat.FirstDayOfWeekOffset.desc=تحديد بداية الأسبوع بشكل مخصص (0 \= الإثنين/إفتراضي, -2 \= السبت)
-module.TeamPopupLinks.desc=يقوم بعرض نافذة منبثقة صغيرة تحتوي على روابط سريعة عندما تحرك مؤشر الفأرة فوق رقم الفريق
 module.StaffMarker.desc=يقوم بتظليل الأسماء المستعارة الخاصة بالموظفين في المنتديات وفي صفحات الفرق
 module.StaffMarker.manager.desc=يقوم بتظليل الأسماء المستعارة الخاصة بالموظفين في صفحات الفرق
 module.StaffMarker.own.desc=مظللات شخصية (format with own userids)\: userId\=1000 userId\=1001 style\='color\:yellow \!important;' userId\=1002 style\='background-color\:yellow;)
@@ -275,6 +274,7 @@ module.LeagueNewsFilter.transfers.desc=إظهار الإنتقالات فقط
 module.LeagueNewsFilter.lineup_changes.desc=إظهار التغيير في التشكيلات فقط
 #MoveManagerOnline
 module.MoveManagerOnline.desc=تحريك المدراء المتصلون حاليا إلى أعلى الصفحة. تحذير هذا الخيار قد يؤدي إلى بطئ شديد في عرض الصفحة
+module.TeamPopupLinks.desc=يقوم بعرض نافذة منبثقة صغيرة تحتوي على روابط سريعة عندما تحرك مؤشر الفأرة فوق رقم الفريق
 module.TeamPopupLinks.TeamLinks.desc=إضافة روابط منبثقة لروابط الفريق
 module.TeamPopupLinks.UserLinks.desc=إضافة روابط منبثقة لروابط المدير
 module.TeamPopupLinks.Manager.desc=المدير (من أجل روابط الفريق) فقط
@@ -387,6 +387,8 @@ module.SafeForWork.desc=استبدال الأيقونة والنص في تبوي
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=العنوان
