--- a/content/locale/cs/foxtrick.properties
+++ b/content/locale/cs/foxtrick.properties
@@ -54,7 +54,6 @@ module.TransferDeadline.desc=Ke každému výsledku vyhledávání na přestupov
 module.HTDateFormat.desc=K důležitým datům uvádí i globální/národní číslo sezóny a týdnu Hattricku
 module.HTDateFormat.LocalSeason.desc=Místo globálního čísla sezóny zobrazovat číslo sezóny příslušné země
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Pro zobrazení prvního dne týdne využít vlastní nastavení (0 \= pondělí/implicitní, -2 \= sobota)
-module.TeamPopupLinks.desc=Při najetí na odkaz na tým zobrazuje malé plovoucí okno s odkazy.
 module.StaffMarker.desc=Zvýrazňuje přezdívky pracovníků Hattricku na konferencích a stránkách týmů.
 module.StaffMarker.manager.desc=Zvýrazňovat přezdívky pracovníků Hattricku na stránkách týmů
 module.StaffMarker.own.desc=Vlastní označení v JSON formátu (ID jako klíč, styl jako hodnota; např. {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"})
@@ -271,6 +270,7 @@ module.LeagueNewsFilter.transfers.desc=Zobrazovat jen informace o přestupech
 module.LeagueNewsFilter.lineup_changes.desc=Zobrazovat jen informace o změnách sestav
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Na stránce regionu přesouvá manažery, kteří jsou připojeni, nahoru. Upozornění\: Pokud počet připojených manažerů přesáhne hodnotu 100, systém může být velice pomalý.
+module.TeamPopupLinks.desc=Při najetí na odkaz na tým zobrazuje malé plovoucí okno s odkazy.
 module.TeamPopupLinks.TeamLinks.desc=Zapnout plovoucí nabídku u odkazů na tým
 module.TeamPopupLinks.UserLinks.desc=Zapnout plovoucí nabídku u odkazů na uživatele
 module.TeamPopupLinks.Manager.desc=Manažer (jen při odkazech vedoucích na tým)
@@ -381,6 +381,8 @@ module.RatingsDisplay.HatStats.desc=Jako HatStats
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
