--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -55,7 +55,6 @@ module.TransferDeadline.desc=Hinzufügen der Zeit in Tagen, Stunden und Minuten 
 module.HTDateFormat.desc=Anzeige der globalen HT-Woche und Saison neben dem Datum auf den wichtigsten Seiten.
 module.HTDateFormat.LocalSeason.desc=Anzeige der lokalen Saison anstelle der globalen
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Einen anderen Tag als Wochenanfang einstellen (0 \= Montag, -2 \= Samstag)
-module.TeamPopupLinks.desc=Anzeige eines kleinen Popups über den Teamnamen mit Direktlinks
 module.StaffMarker.desc=Hervorhebung von Namen der Offiziellen im Forum.
 module.StaffMarker.manager.desc=Offizielle auf der Team-Seite hervorheben
 module.StaffMarker.own.desc=Eigene Aliase
@@ -274,6 +273,7 @@ module.LeagueNewsFilter.transfers.desc=Nur Transfers anzeigen
 module.LeagueNewsFilter.lineup_changes.desc=Nur Aufstellungen anzeigen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Manager die online sind als erstes auf der Regionen-Seite anzeigen. Achtung\! Falls mehr als 100 Manager online sind, so kann die Anzeige sehr verlangsamt werden\!
+module.TeamPopupLinks.desc=Anzeige eines kleinen Popups über den Teamnamen mit Direktlinks
 module.TeamPopupLinks.TeamLinks.desc=TeamPopupLinks den Vereinslinks zufügen
 module.TeamPopupLinks.UserLinks.desc=TeamPopupLinks den Managerlinks zufügen
 module.TeamPopupLinks.Manager.desc=Link zum Manager (nur für Vereinslinks)
@@ -386,6 +386,8 @@ module.SafeForWork.desc=Ersetzt Icon und Titel von Hattrick Tabs um sie zB auf A
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titel
