--- a/content/locale/et/foxtrick.properties
+++ b/content/locale/et/foxtrick.properties
@@ -68,6 +68,8 @@ module.MatchOrderInterface.Specialties.desc=Kuva mängijate erioskusi
 
 # IN-GAME STRINGS. translate first
 
+#Series statistics
+
 #Save for work
 
 #Extrashortcuts
