--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -54,7 +54,6 @@ module.TransferDeadline.desc=Ajoute l'échéance des transferts exprimée en jou
 module.HTDateFormat.desc=Ajoute le format de date HT (semaine et saison) à la plupart des dates.
 module.HTDateFormat.LocalSeason.desc=Affiche la saison Nationnale au lieu de la saison Mondiale.
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Change le premier jour de la semaine (0 \= lundi, -2 \= samedi).
-module.TeamPopupLinks.desc=Affiche une fenêtre avec les raccourcis sélectionnés lorsque vous survolez le lien d'une équipe et/ou d'un utilisateur.
 module.StaffMarker.desc=Marque les pseudonymes des Officiels dans les Forums.
 module.StaffMarker.manager.desc=Marque les pseudonymes des Officiels dans les Forums.
 module.StaffMarker.own.desc=Vos marques
@@ -89,12 +88,14 @@ module.EmbedMedia.EmbedYoutubeVideos.desc=Incorporer les vidéos de YouTube
 module.EmbedMedia.EmbedVimeoVideos.desc=Incorporer vidéos de Vimeo
 module.EmbedMedia.EmbedFunnyOrDieVideos.desc=Incorporez des vidéos de FunnyOrDie
 module.EmbedMedia.EmbedDailymotionVideos.desc=Incorporez des vidéos de Dailymotion
+module.EmbedMedia.EmbedModeOEmebed.desc=Utilisez oEmbed pour incorporer des médias (Firefox et Chrome seulement)
 module.EmbedMedia.ReplaceLinksByTitles.desc=Remplacer le texte du lien par le nom de l'élément multimédia, par exemple le nom de l'image
 module.EmbedMedia.EmbedSoundCloud.desc=Incorporer les sons de Soundcloud
 module.EmbedMedia.EmbedFlickrImages.desc=Incorporer les images de Flickr
 module.EmbedMedia.EmbedDeviantArtImages.desc=Incorporer des images de Deviantart
 module.EmbedMedia.EmbedGenericImages.desc=Incorporer des images si le lien est un lien vers une image
 module.EmbedMedia.EmbedGenericImagesClever.desc=Essayez d'obtenir la bonne adresse de l'image même si le lien ne semble pas être pointer sur celle ci
+module.EmbedMedia.EmbedImageshack.desc=Prise en charge d'ImageShack (Firefox et Chrome seulement)
 #Forum direct page links
 module.DirectPageLinks.desc=Ajoute des liens qui vous permettent d'accéder à une page dans un sujet du Forum.
 #
@@ -273,6 +274,7 @@ module.LeagueNewsFilter.transfers.desc=Uniquement les informations concernant le
 module.LeagueNewsFilter.lineup_changes.desc=Uniquement les informations concernant les changements de composition d'équipes
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Déplace vers le haut la liste des membres connectés des pages Région. Attention\! L'affichage sera très lent si le nombre de joueurs en ligne est supérieur à 100.
+module.TeamPopupLinks.desc=Affiche une fenêtre avec les raccourcis sélectionnés lorsque vous survolez le lien d'une équipe et/ou d'un utilisateur.
 module.TeamPopupLinks.TeamLinks.desc=Activer pour les liens des équipes
 module.TeamPopupLinks.UserLinks.desc=Activer pour les liens des utilisateurs
 module.TeamPopupLinks.Manager.desc=Manager (uniquement depuis un lien Équipe)
@@ -385,6 +387,8 @@ module.SafeForWork.desc=Remplace l'icône et le texte du titre des onglets Hattr
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titre
