--- a/content/locale/fy-NL/foxtrick.properties
+++ b/content/locale/fy-NL/foxtrick.properties
@@ -36,7 +36,6 @@ module.TransferSearchFilters.desc=Soarget foar speurfiltertemplates by de oersta
 module.TransferDeadline.desc=Foeget in ekstra rigel ta oan speurresultaten op de oerstapmerk, mei dagen, oeren en minuten oant oerstapdeadline
 module.HTDateFormat.desc=Foeget de HT-wike en seizoen fan de spulwrâld ta oan de belangrykste HT-datums op de side
 module.HTDateFormat.LocalSeason.desc=Toant lokale seizoen ynstee fan spulwrâld-seizoen
-module.TeamPopupLinks.desc=Toant in lyts popupskermke mei snelkoppelings atst mei de mûs oer in koppeling mei ploechid giest
 module.StaffMarker.desc=Markeart aliassen fan officials op de foarums. Yn de tekstfakken kinst in eigen styl (HTML stylattribuut) oanmeitsje.
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Toant in koppelingsbalk foar de jeugdakademy
@@ -109,6 +108,7 @@ module.CopyMatchID.desc=Kopieart it wedstriidID by in klik op it kompetysje/beke
 module.HeaderFix.desc=Set de kop fan de side fêst
 module.CopyRatings.desc=Foeget in knop ta by 'Aksjes' yn it wedstriidrapport om de wurdearrings nei it klemboerd te kopiearjen (HT-tabelstyl foar forums)
 #MoveManagerOnline
+module.TeamPopupLinks.desc=Toant in lyts popupskermke mei snelkoppelings atst mei de mûs oer in koppeling mei ploechid giest
 module.TeamPopupLinks.TeamLinks.desc=Foegje TeamPopupLinks ta oan ploechkoppelings
 module.TeamPopupLinks.UserLinks.desc=Foegje TeamPopupLinks ta oan managerkoppelings
 module.TeamPopupLinks.Manager.desc=Koppeling nei de manager (allinnich foar ploechkoppelings)
@@ -138,6 +138,8 @@ module.MatchIncome.desc=Wedstriidynkommen yn wedstriidrapport
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
