--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -41,7 +41,6 @@ module.TransferSearchFilters.desc=Permite usar plantiñas no Mercado de traspaso
 module.TransferDeadline.desc=Engade una liña extra a cada resultado da busca no Mercado de traspasos, indicando os días, horas e minutos que fallan para que remate a venda.
 module.HTDateFormat.desc=Engade a tempada e a semana globais de Hattrick ás datas máis importantes das páxinas do HT.
 module.HTDateFormat.LocalSeason.desc=Amosa a tempada local en lugar da tempada global do Hattrick
-module.TeamPopupLinks.desc=Fai aparecer unha pequena ventá emerxente con ligazóns relacionadas co equipo cada vez que pasas co rato por enriba dun acceso directo a un equipo
 module.StaffMarker.desc=Resalta os nomes dos colaboradores de HT nas conferencias. Nos cadros de texto podes definir como queres velos (mediante atributos de estilo HTML)
 module.StaffMarker.own.desc=Marcadores personais
 #ForumYouthIcons
@@ -142,6 +141,7 @@ module.CopyYouth.TrainingReport.desc=Engade un botó de 'Copiar reporte do adest
 module.PlayerBirthday.desc=Amosa o último e o próximo aniversario do xogador nos seus detalles
 module.LeagueNewsFilter.all.desc=Amosar todas as novas
 #MoveManagerOnline
+module.TeamPopupLinks.desc=Fai aparecer unha pequena ventá emerxente con ligazóns relacionadas co equipo cada vez que pasas co rato por enriba dun acceso directo a un equipo
 module.TeamPopupLinks.TeamLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a equipos
 module.TeamPopupLinks.UserLinks.desc=Engade unha ventá emerxente de ligazóns ás ligazóns a usuarios
 module.TeamPopupLinks.Manager.desc=Ligazón ó Mánager (só para ligazóns a equipos)
@@ -179,6 +179,8 @@ module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
