--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -55,7 +55,6 @@ module.TransferDeadline.desc=Ubaciti dodatnu liniju za svaki rezultat pretrage n
 module.HTDateFormat.desc=Prikaz broja tjedna i sezone (na globalnoj/lokalnoj razini) uz najvažnije datume na stranicama Hattricka
 module.HTDateFormat.LocalSeason.desc=Prikazati broj sezone na lokalnoj razini umjesto na globalnoj
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Namjestiti prvi dan u tjednu po izboru (0 \= ponedjeljak/uobičajeno, -2 \= subota)
-module.TeamPopupLinks.desc=Prikazati okvir s prečicama prilikom prelaska preko linka momčadi
 module.StaffMarker.desc=Istaknuti bojom nadimke HT-osoblja na forumima. U tekstualnom meniju možete sami definirati stil označavanja (u HTML stilu).
 module.StaffMarker.manager.desc=Istaknuti bojom nadimke HT-osoblja na klupskoj stranici.
 module.StaffMarker.own.desc=Osobne oznake
@@ -276,6 +275,8 @@ module.LeagueNewsFilter.transfers.desc=Prikazati samo novosti o transferima
 module.LeagueNewsFilter.lineup_changes.desc=Prikazati samo obavijesti o promjenama taktike
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Premjestiti trenutno aktivne (online) korisnike na vrh stranice za regiju. Oprez\! Učitavanje može postati vrlo sporo ako online korisnika ima preko 100.
+module.TeamPopupLinks.desc=Prikazati okvir s prečicama prilikom prelaska preko linka momčadi
+module.TeamPopupLinks.OwnTeamHighlight.desc=Istaknuti vlastitu momčad u tablici
 module.TeamPopupLinks.TeamLinks.desc=Dodati okvir s prečicama na linku za momčad
 module.TeamPopupLinks.UserLinks.desc=Dodati okvir s prečicama na korisnikov nadimak
 module.TeamPopupLinks.Manager.desc=Link na korisnika (samo na linku momčadi)
@@ -382,12 +383,16 @@ module.Filter.desc=Dodaje filtere na vrh stranice igrača
 module.RatingsDisplay.desc=Prikazuje prosječne ocjene u drugom stilu
 module.RatingsDisplay.DenominationsRange.desc=U 0-20 denominacijskom rasponu
 module.RatingsDisplay.HatStats.desc=Kao HatStats
+module.RatingsDisplay.HTSums.desc=Zbroj ocjena kao u Hattricku
 module.SafeForWork.desc=Zamjenjuje ikonu i naslovni tekst Hattrickovih kartica
 
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
+rating.average=Prosječna ocjena
 
 #Save for work
 SafeForWork.title=Naslov
