--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -51,7 +51,6 @@ module.TransferDeadline.desc=Beszúr egy plusz sort az egyes találatok mögé a
 module.HTDateFormat.desc=Megjeleníti a globális/helyi hét és szezon számát a HT-s oldalakon látható legfontosabb dátumok mellett
 module.HTDateFormat.LocalSeason.desc=A globális szezon helyett az adott országban érvényes szezon számát jeleníti meg
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Egyedi eltolási értéket használ, amellyel beállíthatod a hét első napját (0 \= hétfő/alapértelmezett, -2 \= vasárnap)
-module.TeamPopupLinks.desc=Megjelenít egy gyorshivatkozásokat tartalmazó ablakot, amikor a kurzort egy csapatazonosító fölé viszed
 module.StaffMarker.desc=Kiemeli a HT-stábtagok nickneveit a fórumokon és a csapatoldalakon.
 module.StaffMarker.manager.desc=Kiemeli a HT-stábtagok nickneveit a csapatoldalakon.
 module.StaffMarker.own.desc=Személyes jelölők (saját felhasználói azonosítót tartalmazó formátum)\: userId\=1000 userId\=1001 stílus\='color\:yellow \!fontos;' userId\=1002 stílus\='background-color\:yellow;)
@@ -235,6 +234,7 @@ module.LeagueNewsFilter.transfers.desc=Csak az átigazolásokat jeleníti meg
 module.LeagueNewsFilter.lineup_changes.desc=Csak a felállás módosításait jeleníti meg
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Felülre helyezi az online menedzserek listáját a Régiók oldalon. Figyelem\! Ha az online játékosok száma eléri a 100-at, a folyamat igencsak lelassul\!
+module.TeamPopupLinks.desc=Megjelenít egy gyorshivatkozásokat tartalmazó ablakot, amikor a kurzort egy csapatazonosító fölé viszed
 module.TeamPopupLinks.TeamLinks.desc=Előugró hivatkozásokat ad a csapathivatkozásokhoz
 module.TeamPopupLinks.UserLinks.desc=Előugró hivatkozásokat ad a menedzserhivatkozásokhoz
 module.TeamPopupLinks.Manager.desc=Menedzser (csak a csapathivatkozásokhoz)
@@ -317,6 +317,8 @@ module.MyMonitor.desc=A barátok és riválisok legutóbbi meccseinek figyelése
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
