--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -55,7 +55,6 @@ module.TransferDeadline.desc=Aggiunge ad ogni risultato della ricerca trasferime
 module.HTDateFormat.desc=Aggiunge la stagione e settimana di HT nelle date più importanti
 module.HTDateFormat.LocalSeason.desc=Visualizza la stagione nazionale al posto della stagione mondiale
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Usa un offset personalizzato per impostare il primo giorno della settimana (0 \= lunedì/default, -2 \= sabato)
-module.TeamPopupLinks.desc=Visualizza un menu a tendina di scorciatoie quando passi sopra il collegamento ad una squadra
 module.StaffMarker.desc=Evidenzia i membri dello staff nei forum e nelle pagine delle squadre. Si possono impostare attributi personalizzati in stile HTML.
 module.StaffMarker.manager.desc=Evidenzia i membri dello staff nelle pagine delle squadre
 module.StaffMarker.own.desc=Se stessi
@@ -274,6 +273,7 @@ module.LeagueNewsFilter.transfers.desc=Mostra solo trasferimenti
 module.LeagueNewsFilter.lineup_changes.desc=Mostra solo cambiamenti alla formazione
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Sposta gli utenti online in alto nella pagina delle regioni. Attenzione\! Può essere molto lenta se i giocatori sono più di 100.
+module.TeamPopupLinks.desc=Visualizza un menu a tendina di scorciatoie quando passi sopra il collegamento ad una squadra
 module.TeamPopupLinks.TeamLinks.desc=Visualizza il menu a tendina sui collegamenti alle squadre
 module.TeamPopupLinks.UserLinks.desc=Visualizza il menu a tendina sui collegamenti agli utenti
 module.TeamPopupLinks.Manager.desc=Utente (solo per collegamenti alle squadre)
@@ -386,6 +386,8 @@ module.SafeForWork.desc=Sostituisce l'icona e il testo del titolo delle schede d
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titolo
