--- a/content/locale/ja/foxtrick.properties
+++ b/content/locale/ja/foxtrick.properties
@@ -54,7 +54,6 @@ module.TransferDeadline.desc=移籍市場の検索結果に移籍期限までの
 module.HTDateFormat.desc=Hattrickページの最も重要な日付にグローバル/ローカルなHattrickの週とシーズンを追加する
 module.HTDateFormat.LocalSeason.desc=グローバルシーズンの代わりにローカルシーズンを表示する
 module.HTDateFormat.FirstDayOfWeekOffset.desc=週の最初の日を設定するカスタムオフセットを利用する(0\=月曜日/既定、-2\=土曜日)
-module.TeamPopupLinks.desc=TeamIDリンクをポイントしたとき、クイックリンク用のポップアップウィンドウを表示する
 module.StaffMarker.desc=フォーラムとチームページでオフィシャルニックをマークする
 module.StaffMarker.manager.desc=チームページでオフィシャルニックをマークする
 module.StaffMarker.own.desc=userIDをキーに、スタイルを値にするJSONフォーマットのカスタムマーカー。例\:{"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
@@ -275,6 +274,7 @@ module.LeagueNewsFilter.transfers.desc=移籍のみ表示する
 module.LeagueNewsFilter.lineup_changes.desc=ラインナップの変更のみ表示する
 #MoveManagerOnline
 module.MoveManagerOnline.desc=地域のページでオンライン中の監督へのリンクを表示する。注意！オンラインプレイヤーのリストが100を超えるとすごく遅くなる。
+module.TeamPopupLinks.desc=TeamIDリンクをポイントしたとき、クイックリンク用のポップアップウィンドウを表示する
 module.TeamPopupLinks.TeamLinks.desc=チームリンクのポップアップを追加する
 module.TeamPopupLinks.UserLinks.desc=監督リンクのポップアップを追加する
 module.TeamPopupLinks.Manager.desc=監督(チームリンク専用)
@@ -387,6 +387,8 @@ module.SafeForWork.desc=職場や授業中Hattrickを開いているとき、Hat
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=タイトル
