--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -42,7 +42,6 @@ module.TransferDeadline.desc=Iżid linja żejda għal kull riżultat ta' tfittxi
 module.HTDateFormat.desc=Iżid il-ġimgħa u l-istaġun globali/lokali ta' HT għall-aktar dati importanti fuq il-paġni ta' HT
 module.HTDateFormat.LocalSeason.desc=Juri l-istaġun lokali minflok l-istaġun globali
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Juża numru bħala indikazzjoni tal-ewwel ġurnata tal-ġimgħa (0 \= it-Tnejn/default, -2 \= is-Sibt)
-module.TeamPopupLinks.desc=Itella' tieqa żgħira b'links ta' malajr meta tmexxi l-cursor fuq l-link bl-id tat-tim
 module.StaffMarker.desc=Jimmarka l-ismijiet tal-uffiċjali fil-forums u fuq il-paġna tat-timijiet. Tista' tiddefinixxi l-istil tiegħek (stil HTML) fil-kaxxi l-vojta.
 module.StaffMarker.manager.desc=Immarka l-ismijiet tal-uffiċjali fuq il-paġna tat-timijiet.
 module.StaffMarker.own.desc=Marki personali
@@ -186,6 +185,7 @@ module.LeagueNewsFilter.transfers.desc=Juri t-trasferimenti biss
 module.LeagueNewsFilter.lineup_changes.desc=Juri bdil fil-formazzjoni biss
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Imexxi 'l fuq il-maniġers li qegħdin online fuq il-paġna tar-reġjuni. Attent\! Din tista' tieħu ammont ta' ħin konsiderevoli jekk il-lista ta' persuni online taqbeż il-100.
+module.TeamPopupLinks.desc=Itella' tieqa żgħira b'links ta' malajr meta tmexxi l-cursor fuq l-link bl-id tat-tim
 module.TeamPopupLinks.TeamLinks.desc=Iżid links biex tiftaħ popups fuq it-timijiet
 module.TeamPopupLinks.UserLinks.desc=Iżid links biex tiftaħ popups fuq il-maniġers
 module.TeamPopupLinks.Manager.desc=Link għall-maniġer (għal links tat-tim biss)
@@ -242,6 +242,8 @@ module.RapidId.desc=Kaxxa konvenjenti fuq in-naħa ta' fuq tal-paġna biex tkun 
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
