--- a/content/locale/nl/foxtrick.properties
+++ b/content/locale/nl/foxtrick.properties
@@ -56,7 +56,6 @@ module.TransferDeadline.desc=Toon een extra regel bij ieder zoekresultaat op de 
 module.HTDateFormat.desc=Toon de Global HT / lokale week en seizoen bij de belangrijkste datums op Hattrick pagina's
 module.HTDateFormat.LocalSeason.desc=Toon lokale seizoen in plaats van het seizoen op Global HT
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Gebruik een aangepaste eerste dag van de week (0 \= maandag (standaard), -2 \= zaterdag, etc.)
-module.TeamPopupLinks.desc=Toon een klein pop-up venster met snelkoppelingen als je je muis op een team ID link plaatst
 module.StaffMarker.desc=Markeer gebruikers op het forum en teampagina's, die tot de Hattrick Officials behoren
 module.StaffMarker.manager.desc=Markeer de alias van officials op teampagina's
 module.StaffMarker.own.desc=Persoonlijke markeringen
@@ -275,6 +274,7 @@ module.LeagueNewsFilter.transfers.desc=Toon alleen transfers
 module.LeagueNewsFilter.lineup_changes.desc=Toon alleen opstellingswijzigingen
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Verplaats het overzicht, met welke managers online zijn, naar boven op de regio pagina. Pas op\: dit kan erg traag worden als er meer dan 100 managers online zijn.
+module.TeamPopupLinks.desc=Toon een klein pop-up venster met snelkoppelingen als je je muis op een team ID link plaatst
 module.TeamPopupLinks.TeamLinks.desc=Toon team pop-up naar teamlinks
 module.TeamPopupLinks.UserLinks.desc=Toon team pop-up naar managerlinks
 module.TeamPopupLinks.Manager.desc=Link naar de manager (alleen voor teamlinks)
@@ -387,6 +387,8 @@ module.SafeForWork.desc=Vervangt het pictogram en de titeltekst van de Hattrick 
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titel
