--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -44,7 +44,6 @@ module.TransferDeadline.desc=Pokazuje czas pozostały do końca licytacji przy w
 module.HTDateFormat.desc=Pokazuje tydzień oraz (globalny/lokalny) sezon Hattricka przy datach np. meczów, transferów itp.
 module.HTDateFormat.LocalSeason.desc=Pokazuje numer sezonu lokalnego (krajowego) zamiast globalnego
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Zdefiniuj pierwszy dzień tygodnia sam (0 \= poniedziałek, -2 \= niedziela)
-module.TeamPopupLinks.desc=Wyświetla małe okienko pop-up z szybkimi odnośnikami, gdy kursor myszki znajdzie się na nazwie zespołu
 module.StaffMarker.desc=Koloruje nicki załogi Hattricka na forum oraz stronach drużyn
 module.StaffMarker.manager.desc=Koloruj nicki załogi Hattricka na forum.
 module.StaffMarker.own.desc=Własne znaczniki
@@ -216,6 +215,7 @@ module.LeagueNewsFilter.transfers.desc=Pokazuj tylko informacje o transferach
 module.LeagueNewsFilter.lineup_changes.desc=Pokazuj tylko informacje o zmianie rozkazów meczowych
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Przesuwa w górę listę zalogowanych prezesów na stronie regionu. Uwaga\! Hattrick może działać bardzo wolno jeśli liczba zalogowanych graczy przekroczy 100.
+module.TeamPopupLinks.desc=Wyświetla małe okienko pop-up z szybkimi odnośnikami, gdy kursor myszki znajdzie się na nazwie zespołu
 module.TeamPopupLinks.TeamLinks.desc=Aktywuje moduł TeamPopupLinks dla drużyn klubowych
 module.TeamPopupLinks.UserLinks.desc=Aktywuje moduł TeamPopupLinks dla prezesa/właściciela
 module.TeamPopupLinks.Manager.desc=Link do strony prezesa (tylko dla drużyn klubowych)
@@ -277,6 +277,8 @@ module.ForumThreadAutoIgnore.Whitelist_ThreadIDs.desc=Lista ID tematów zawsze w
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
