--- a/content/locale/pt-BR/foxtrick.properties
+++ b/content/locale/pt-BR/foxtrick.properties
@@ -45,7 +45,6 @@ module.FlagCollectionToMap.desc=Mostra, para cada categoria, um mapa com todos o
 module.TransferSearchFilters.desc=Permite filtros de procura na pagina de transferencias
 module.TransferDeadline.desc=Adicionar uma linha extra para cada resultado da busca no mercado de transferencia com dias, horas e minutos até o final da tranferencia
 module.HTDateFormat.desc=Adicionar HT global semana e temporada nas mais importantes datas nas paginas do HT
-module.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com varios links quando passar o cursor por cima de um link para uma equipa
 module.StaffMarker.desc=Realça os nicks de membros do staff nos foruns
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Mostrar a barra de link para a Escola de Juniors
@@ -114,6 +113,7 @@ module.NewMail.NotifyMail.desc=Mostrar uma notificação se existem novos e-mail
 module.NewMail.NotifyForum.desc=Mostrar uma notificação se há novas respostas para você no fórum
 module.CopyYouth.ScoutComment.desc=Comentário do olheiro
 #MoveManagerOnline
+module.TeamPopupLinks.desc=Mostra uma pequena janela pop-up com varios links quando passar o cursor por cima de um link para uma equipa
 module.TeamPopupLinks.TeamHistory.desc=Histórico do clube
 module.TeamPopupLinks.NextMatch.desc=Próximo jogo
 module.TeamPopupLinks.AddNextMatch.desc=Adicionar próximo jogo no HT Live
@@ -187,6 +187,8 @@ module.RatingsDisplay.HatStats.desc=Hatstats
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
