--- a/content/locale/ro/foxtrick.properties
+++ b/content/locale/ro/foxtrick.properties
@@ -55,7 +55,6 @@ module.TransferDeadline.desc=Adauga o linie suplimentara pentru fiecare jucator 
 module.HTDateFormat.desc=Adauga saptamana si sezonul la nivel global/local la cele mai importante date privind paginile HT
 module.HTDateFormat.LocalSeason.desc=Afiseaza sezonul local in locul sezonului global.
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Utilizeaza setari personale pentru a seta prima zi a saptamanii (0 \= luni, -2 \= sambata)
-module.TeamPopupLinks.desc=Afiseaza o fereastra mica pop-up cu linkuri rapide cand menti cursorul peste un link teamid
 module.StaffMarker.desc=Marcheaza nickname-urile oficialilor pe forum.
 module.StaffMarker.manager.desc=Marcheaza oficialii pe paginile echipelor.
 module.StaffMarker.own.desc=Marcaje personale
@@ -274,6 +273,7 @@ module.LeagueNewsFilter.transfers.desc=Arata stiri doar despre transferuri
 module.LeagueNewsFilter.lineup_changes.desc=Arata stiri doar despre schimbarile ordinelor
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Muta managerii online pe pagina regiunilor. Atentie\! Va functiona foarte incet daca numarul managerilor online depaseste 100.
+module.TeamPopupLinks.desc=Afiseaza o fereastra mica pop-up cu linkuri rapide cand menti cursorul peste un link teamid
 module.TeamPopupLinks.TeamLinks.desc=Adauga TeamPopupLinks la linkurile echipei
 module.TeamPopupLinks.UserLinks.desc=Adauga TeamPopupLinks la linkurile utilizatorului
 module.TeamPopupLinks.Manager.desc=Link catre Manager (doar pentru linkurile echipei)
@@ -386,6 +386,8 @@ module.SafeForWork.desc=Inlocuieste pictograma si titlul tab-urilor Hattrick pen
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titlu
