--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -173,6 +173,8 @@ module.RatingsDisplay.HatStats.desc=Kot HatStati
 
 # IN-GAME STRINGS. translate first
 
+#Series statistics
+
 #Save for work
 
 #Extrashortcuts
