--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -42,7 +42,6 @@ module.TransferDeadline.desc=Shton një rrjesht tjetër te rezultatet e kërkimi
 module.HTDateFormat.desc=Shton javën dhe sezonin global të HT dhe datat më të rëndësishme te faqet e HT
 module.HTDateFormat.LocalSeason.desc=Tregon sezonin lokal në vënd të sezonit global
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Përdor vlerat tuaja për të treguar ditën e parë të javës (0 \= e hënë, -2 \= e shtunë)
-module.TeamPopupLinks.desc=Tregon një dritare të vogël me link të shpejtë kur ju kaloni kursorin te emri i ekipit
 module.StaffMarker.desc=Ngjyros nofkat e zyrtarëve në forume. Te kutia e tekstit ju mund të caktoni stilin tuaj (stili HTML).
 module.StaffMarker.own.desc=Ngjyrat personale
 #ForumYouthIcons
@@ -169,6 +168,7 @@ module.LeagueNewsFilter.transfers.desc=Shfaq vetëm shitblerjet
 module.LeagueNewsFilter.lineup_changes.desc=Shfaq vetëm ndryshimet në rreshtim
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Zhvendos lart manaxherët në linjë tek faqja e zonës. Kujdes\! Kjo ngadalësohet shumë nëse lista e përdoruesve në linjë tejkalon 100.
+module.TeamPopupLinks.desc=Tregon një dritare të vogël me link të shpejtë kur ju kaloni kursorin te emri i ekipit
 module.TeamPopupLinks.TeamLinks.desc=Shton LinkPopup të ekipit tek linket e ekipeve
 module.TeamPopupLinks.UserLinks.desc=Shton Linkpopup tek linket e manaxherëve
 module.TeamPopupLinks.Manager.desc=Link për tek menaxheri (vetëm për linket e ekipeve)
@@ -210,6 +210,8 @@ module.MatchTables.RemoveTime.desc=Heq kohet e ndeshjeve te tabela
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
