--- a/content/locale/sv-SE/foxtrick.properties
+++ b/content/locale/sv-SE/foxtrick.properties
@@ -52,7 +52,6 @@ module.TransferDeadline.desc=Lägger till en extra rad till varje sökresultat p
 module.HTDateFormat.desc=Lägger till vecka och säsong till de viktigaste datumen på Hattricksidor
 module.HTDateFormat.LocalSeason.desc=Visa lokal säsong istället för global säsong
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Sätt första dag i veckan (0\=måndag/default, -2\=lördag)
-module.TeamPopupLinks.desc=Visar ett litet pop-up fönster med snabblänkar när du för musen över en lagID -länk
 module.StaffMarker.desc=Markerar funktionärers användarnamn i forumen och på lagsidor
 module.StaffMarker.manager.desc=Markera funktionärers användarnamn på lagsidan.
 module.StaffMarker.own.desc=Personliga markörer i JSON format med användarid (userID) som grund. Format\: {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
@@ -263,6 +262,7 @@ module.LeagueNewsFilter.transfers.desc=Visa endast transfers
 module.LeagueNewsFilter.lineup_changes.desc=Visa endast laguppställningsändringar
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Flyttar online managers upp på regionsidan. Varning\! Detta blir mycket långsamt om listan blir över 100.
+module.TeamPopupLinks.desc=Visar ett litet pop-up fönster med snabblänkar när du för musen över en lagID -länk
 module.TeamPopupLinks.TeamLinks.desc=Lägg till Lag-popup-länkar till laglänkar
 module.TeamPopupLinks.UserLinks.desc=Lägg till Lag-popup-länkar till användarlänkar
 module.TeamPopupLinks.Manager.desc=Länk till managern (endast för laglänkar)
@@ -364,6 +364,8 @@ module.RatingsDisplay.HatStats.desc=Som HatStats
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
