--- a/content/locale/tr/foxtrick.properties
+++ b/content/locale/tr/foxtrick.properties
@@ -54,7 +54,6 @@ module.TransferDeadline.desc=Transfer bitene kadar transfer marketteki her arama
 module.HTDateFormat.desc=Uluslarası/Bölgesel HT hafta ve sezonlarını HT sayfalarının önemli günler bölümüne ekler
 module.HTDateFormat.LocalSeason.desc=Uluslarası sezon yerine bölgesel sezonu göster
 module.HTDateFormat.FirstDayOfWeekOffset.desc=Haftanın ilk gününü seçmek için (0\=Pazartesi/varsayılan,-2\=cumartesi gibi) özel ofset kullan
-module.TeamPopupLinks.desc=Bir takım-id linki'ne imleci getirdiğinizde , çabuk linkler barındıran küçük açılır bir pencere gösterir.
 module.StaffMarker.desc=Çalışanların nicklerini forum ve takım sayfalarında işaretler.
 module.StaffMarker.manager.desc=Çalışanların nicklerini takım sayfasında işaretler.
 module.StaffMarker.own.desc=JSON formatında özel işaretler, kullanıcı ID, anahtar olarak, stil değer olarak kullanılır, örnek\: {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
@@ -271,6 +270,7 @@ module.LeagueNewsFilter.transfers.desc=Sadece transferleri göster
 module.LeagueNewsFilter.lineup_changes.desc=Sadece kadro değişikliklerini göster
 #MoveManagerOnline
 module.MoveManagerOnline.desc=Bölge sayfasında online olan kullanıcıları üste taşır. Dikkat\! Eğer online kullanıcı sayısı 100 ü geçerse bu seçenek çok yavaşlar.
+module.TeamPopupLinks.desc=Bir takım-id linki'ne imleci getirdiğinizde , çabuk linkler barındıran küçük açılır bir pencere gösterir.
 module.TeamPopupLinks.TeamLinks.desc=takım linklerine bağlantı ekle
 module.TeamPopupLinks.UserLinks.desc=Menajer linkleri bağlantılar ekle
 module.TeamPopupLinks.Manager.desc=Menejer (sadece takım bağlantıları için)
@@ -381,6 +381,8 @@ module.RatingsDisplay.HatStats.desc=HatStats
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
