--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -28,6 +28,7 @@ module.AddLeaveConfButton.desc=Tilføjer en  'Forlad konference' knap til hvert 
 module.StarsCounter.desc=Tilføjer det totale antal af stjerne til kampopstillingssiden
 module.MoveLinks.desc=Flytter managerens liga og flag links, til 'indlægs overskriften'. Husk\: 'Vis brugerikoner og info' funktionen i Hattrick  skal være sat til, for at det virker\!
 #AttVsDef
+module.AttVsDef.desc=Tilføjer angreb/forsvar sammenligning til kamp siden
 module.AttVsDef.oldstyle.desc=gammel stil
 module.AttVsDef.newstyle.desc=ny stil
 module.AttVsDef.oldstyleifkseparated.desc=gamle stil (adskilt ind. dødbolde)
@@ -48,13 +49,16 @@ module.MedianTransferPrice.desc=Viser median transfer prisen i transfer sammenli
 module.FlagCollectionToMap.desc=Viser et verdenskort med alle de lande, hvis flag du har indsamlet i hver kategori
 module.TransferSearchFilters.desc=Giver mulighed for at lave Søgefilter-skabeloner til transferlisten
 module.TransferSearchResultFilters.desc=Ekstra filtre til filtrering af transfer søgeresultater
+module.TransferDeadline.desc=Tilføjer en ekstra linje til hvert søgeresultat på transfer markedet med dage, timer og minutter indtil handelen slutter
 module.HTDateFormat.desc=Tilføjer den globale/lokale HT uge og sæson til de vigtigste datoer på HT sider
 module.HTDateFormat.LocalSeason.desc=Vis den lokale sæson i stedet for den globale sæson
+module.HTDateFormat.FirstDayOfWeekOffset.desc=Brug brugerdefinerede forskydning til at angive din første dag i ugen (0 \= mandag/standard, -2 \= lørdag)
 module.StaffMarker.desc=Markerer funktionær brugernavne på fora og hold sider.
 module.StaffMarker.manager.desc=Markere Funktionærer brugernavne på hold sider.
 module.StaffMarker.own.desc=Brugerdefinerede markører i JSON format med bruger-ID som nøgle og typografi som værdi, f.eks. {"1001"\: "farve\: rød;", "1002"\: "background-color\: yellow;"}
 module.StaffMarker.HT-Youthclub.desc=Markere HT-Youthclub personale
 #ForumYouthIcons
+module.ForumYouthIcons.desc=Viser et hyperlinkpanel for ungdomsskolen (fungerer også for mail, presse meddelelser, gæstebog og annoncer)
 module.ForumYouthIcons.q.desc=Tilføjer ikon for citat tags, hvis mangler
 module.ForumYouthIcons.user_id.desc=Tilføjer ikon for BrugerID
 module.ForumYouthIcons.kit_id.desc=Tilføjer ikon for KitID
@@ -68,10 +72,15 @@ module.ForumYouthIcons.youth_match.desc=Tilføjer ikon for UngdomskampID
 module.ForumYouthIcons.youth_series.desc=Tilføjer ikon for UngdomsserieID
 module.ForumYouthIcons.enlarge_input.desc=Forstørrer tekstfeltet for bedre skrivning
 module.ForumYouthIcons.pre.desc=Tilføjer ikon for Forum 'præ' format
+module.ForumYouthIcons.table.desc=Der føjes et ikon for tabel. Brugerdefineret mærkater accepterer regulære udtryk (skjul med yderligere, f.eks.)
+module.ForumYouthIcons.symbols.desc=Der føjes et ikon til symboler nedenfor. Posteringer er adskilt af semikoloner. For at bruge et semikolon Angiv "/;".
 module.ForumYouthIcons.debug.desc=Tilføjer ikon for FoxTrick Fejlfinding log
 module.ForumYouthIcons.settings.desc=Tilføjer ikon for FoxTrick indstillinger
+module.ForumYouthIcons.tournament.desc=Der føjes et ikon for TournamentID
+module.ForumYouthIcons.tournament_match.desc=Der føjes et ikon for TournamentKampID
 #FormatPostingText
 module.FormatPostingText.desc=Erstatter FoxTrick HT-ML-tags med HTML-tags (dvs. 'præ' element)
+module.FormatPostingText.NestedQuotesAsSpoilers.desc=Viser indskudte citater i en spoiler. Angive niveauet nedenfor.
 #EmbedMedia
 module.EmbedMedia.desc=Registrerer links til mediefiler og integrerer dem ind på webstedet. (Eksperimentel)
 module.EmbedMedia.EmbedYoutubeVideos.desc=Integrer YouTube-videoer
@@ -116,6 +125,7 @@ module.LinksAchievements.desc=Tilføjer eksterne links til bedrifts siden
 module.LinksStaff.desc=Tilføjer eksterne links til personale siden
 module.LinksTracker.desc=Tilføjer eksterne tracker links til de tilsvarende landsholds og spiller sider
 module.LinksClubTransfers.desc=Tilføjer eksterne links til klub transfer siden
+module.LoyaltyDisplay.desc=Fremhæver effekten af loyalitet og moder klub bonus på dine spilleres personlige side (fungerer kun hvis 'Vis evnebjælker' indstillingen er  aktiveret i HT sideindstillinger)
 module.ForumAlterHeaderLine.desc=Ændrer overskrift linjen på indlæg
 module.Singleline2.desc=Alternativt Forum overskrift enkelt linie modul. Lidt hurtigere end de andre versioner. Deaktiverer nogle modstridende ændrings moduler ved forumindlæg.
 # please translate next lines again if needed
@@ -125,6 +135,7 @@ module.ForumAlterHeaderLine.TruncateLongNick.desc=Viser kun de første 10 (simpl
 module.ForumAlterHeaderLine.TruncateLeagueName.desc=Viser kun divisionen.
 module.ForumAlterHeaderLine.ShortPostId.desc=Fjern indlægsID, viser kun nummer af indlæg (Hvis du bruger HT-funktionen, 'detaljeret indlægsoverskrift')
 module.ForumAlterHeaderLine.SmallHeaderFont.desc=Fjerner noget mellemrum og bruger skriftstørrelse 10 til forum overskrifter
+module.ForumAlterHeaderLine.CheckDesign.desc=Kontrollerer om en enkelt overskriftslinje bryder side design og om nødvendig viser indlægsoverskriften til tråden i to linjer. Denne funktion sænker hastigheden for visning af siden.
 module.ForumAlterHeaderLine.ReplaceSupporterStar.desc=Erstatter supporter stjerne med tegnet * for at spare plads
 module.ForumAlterHeaderLine.BookmarkHeaderSmall.desc=Erstatter 'bogmærke post' ikonet med en mindre
 module.ForumAlterHeaderLine.HighlightThreadOpener.desc=Fremhæver-ID'erne for alle indlæg indsendt af tråd starter
@@ -138,6 +149,7 @@ module.ConfirmActions.desc=Bed brugeren om at bekræfte før visse handlinger
 module.ConfirmActions.Bid.desc=Byde på en spiller
 module.ConfirmActions.TransferList.desc=Sætte en spiller på transferlisten
 module.ConfirmActions.NtChange.desc=Tilføje/fjerne en spiller til/fra landshold
+module.ConfirmActions.StaffChange.desc=Ansætter/Afskediger personale
 module.PersonalityImages.desc=Tilføj farvede tal for popularitet, karakter og psyke på spiller side
 module.HideSignatures.desc=Skjul signaturer i forum indlæg, vis et 'Signatur' hyperlink i stedet
 module.MarkUnread.desc=Tilføjer et link til at markere alle indlæg som ulæst fra den aktuelle indlæg
@@ -145,8 +157,11 @@ module.ForumModeratorIconLinks.desc=Tilføj ikoner til at få adgang til moderat
 module.ForumNextAndPrevious.desc=Fjerne 'Næste' og 'Forrige' knapperne på forum tråde, hvis de er deaktiveret
 module.ForumLastPost.desc=Hop til sidste indlæg i stedet for at hoppe til den første, af læste tråde
 module.ForumLastPost.lastpage.desc=Gå til sidste side, ikke senest indlæg
+module.MatchPlayerColouring.desc=Farver spillere, afhængigt af deres hold i kamp rapporten. Når du bruger hyperlinks på spiller detalje siden, fremhæver det kun denne spiller
+module.MatchPlayerColouring.SeparateOwnPlayerColors.desc=Separere egne spiller farvning
 module.MatchReportFormat.desc=Præsentation af kamprapporten linie for linie i henhold til kamp begivenheder.
 module.MatchReportFormat.ShowEventIcons.desc=Tilføj specifikke ikoner for begivenheder.
+module.MatchReportFormat.SeparateOwnTeamColors.desc=Separere eget hold farvning
 module.ForumRedirManagerToTeam.desc=Omdirigere links fra manager side til hold side på forum links
 module.ManagerButtons.desc=Tilføje eller ændre manager knapper på manager og hold side
 module.ManagerButtons.GuestBook.desc=Tilføjer skriv i gæstebog link til manager og hold side
@@ -169,6 +184,7 @@ module.CopyPlayerAd.desc=En knap på spillerens side til kopiering af hans detal
 module.CopyPlayerAd.Sorted.desc=Sortere evner i faldende rækkefølge.
 module.CopyPlayerAd.NonTableStyle.desc=Kopiere almindelig uden tabeller.
 module.CustomMedals.desc=Erstatter de nye Hattrick medaljer med dem i den gamle stil
+module.SeniorTeamShortCuts.desc=Tilføjer træner og sidste opstillings links til senior hold
 module.SeniorTeamShortCuts.OnlyOtherPages.desc=Vis kun på andre hold sider
 module.SeniorTeamShortCuts.AllPages.desc=Vis på alle sider
 #ExtendedPlayerDetails
@@ -182,6 +198,7 @@ module.ExtendedPlayerDetailsWage.desc=Viser løn uden bonus og/eller sæsonbeste
 module.ExtendedPlayerDetailsWage.WageWithoutBonus.desc=Viser løn uden bonus
 module.ExtendedPlayerDetailsWage.SeasonWage.desc=Viser sæsonbestemte løn
 module.FixcssProblems.desc=Løser nogle problemer med forkert HT css-typografier
+module.FixcssProblems.Club_Menu_Teamnames.desc=Retter afkortning af lange hold navne i venstre menuen
 module.FixcssProblems.Forum_FoxLink_Headers.desc=Retter usynlige FoxLink billeder i indlægs overskrifter
 module.FixcssProblems.HideInvitation.desc=Skjul invitation feltet som er synlig på bunden af undermenuen
 module.FixcssProblems.Page_Minimum_Height.desc=Retter side hop når ingen rullepanel vises
@@ -204,6 +221,7 @@ module.ForumPresentation.Forum_Spoiler_reveal.desc=Viser altid indholdet af spoi
 module.ForumPresentation.Forum_NewPostsInBracket.desc=Vis antallet af nye indlæg i parentes efter total indlæg
 module.ForumPresentation.Forum_Link_Grey_Icons.desc=Vis ikoner i stedet for teksthyperlinks i forum indlæg
 module.ForumPresentation.moved_avatarinfo_fix.desc=Retter fejlagtigt placerede bruger info hvis indlægsoverskriften bliver overfyldt
+module.SkinPlugin.desc=Tilføjer dine egne CSS design til Hattrick
 module.CurrencyConverter.desc=Konvertere en HT valuta
 module.MovePlayerStatement.desc=Flytter spiller udtalelser ved siden af spiller billedet. Hvis billeder er deaktiveret, fjernes udtalelser.
 module.TickerColoring.desc=De forskellige hændelser der vises ved nyheds ticker vil være farvet.
@@ -221,17 +239,28 @@ module.ExtraShortcuts.No9.desc=No9 Radio
 module.ExtraShortcuts.Latehome.desc=Latehome Radio
 module.ExtraShortcuts.Downtime.desc=Downtime Radio
 #CopyMatchID
+module.CopyMatchID.desc=Kopierer kamp-id ved at klikke på ikonet liga/cup/venskabskamp/turnering på kampe eller kamp arkiv siderne. For HT supporter virker det også på 'Hold mod Hold' siden('Seneste kampe' og 'Historie' faner).
 module.HeaderFix.desc=Fastholder overskriften mens du ruller (påvirker også på andre sider af HT)
 module.HeaderFix.FixLeft.desc=Fastholder også undermenuen mens du ruller
 module.CopyRatings.desc=Tilføj links til ratings tabel på kamp rapport side for kopiering af ratings (i HT-ML)
 module.GoalDifferenceToTables.desc=Tilføjer en ekstra kolonne til mål forskellen på opryknings tabel samt på gamle serie tabeller
+module.CrossTable.desc=Tilføjer en ekstra tabel til kampprogram siden, hvor alle liga resultater præsenteres herunder graf af liga stillinger
 module.ElectionTable.desc=Tilføjer procentdel til valg tabellen (kun viste stemmer tælles, ikke alle)
 module.ContextMenuCopy.desc=Muligheder på genvejsmenuen for kopiering af ID og/eller hyperlink og indhold i HT-ML
 module.ContextMenuCopy.Id.desc=Mulighed for kopiering af ID
 module.ContextMenuCopy.Link.desc=Mulighed for kopiering af link placering i HT-ML
+module.ContextMenuCopy.HtMl.desc=Mulighed for kopiering af valgte indhold i HT-ML
+module.ContextMenuCopy.Table.desc=Mulighed for kopiering af tabel i HT-ML
+module.NewMail.desc=Fremhæv nye mail og nye forum besked optælling
+module.NewMail.NotifyMail.desc=Vis en besked, hvis der er ny(e) mails til dig
+module.NewMail.NotifyMailSound.desc=Afspil lyd ved ny mail
+module.NewMail.NotifyForum.desc=Vis en besked, hvis der er nye forum svar til dig
+module.NewMail.NotifyForumSound.desc=Afspil lyd på nye forum svar
+module.CopyYouth.desc=Kopiere funktioner for ungdom rapporter og kilder
 module.CopyYouth.TrainingReport.desc=Trænings rapport
 module.CopyYouth.ScoutComment.desc=Spejder kommentar
 #MoveManagerOnline
+module.TeamPopupLinks.desc=Viser et lille pop op-vindue med links, når du placerer musemarkøren over et HoldID link
 module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 #YouthSkillHideUnknown
 #HighlightCupwins
@@ -241,6 +270,8 @@ module.MatchIncome.desc=Vis tilskuerindtægterne I kampreferatet
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 SafeForWork.title=Titel
@@ -283,14 +314,37 @@ TeamStats.PlayedLatest=Spillede i sidste kamp
 TeamStats.NotPlayedLatest=Spillede ikke i sidste kamp
 TeamStats.NotTransferListed=Ikke til salg
 TeamStats.ActivePlayers=Aktive spillere
+TeamStats.HomeGrownPlayers=Egen avlet spillere
+TeamStats.PurchasedPlayers=Købte spillere
+TeamStats.FilterFor=Filter til
 
 #PlayerBirthday
 PlayerBirthday.BirthdayToday=Fødselsdage i dag
 
 #season stats
 #note to translators. use abreviations of league table where applicable
+seasonstats.boxheader=Sæson oversigt
+seasonstats.played=Spillet
+seasonstats.won=V
+seasonstats.draw=U
+seasonstats.lost=T
+seasonstats.goalplus=MF
+seasonstats.goalminus=MI
+seasonstats.goaldiff=±
+seasonstats.total=To
+seasonstats.home=H
+seasonstats.away=U
+seasonstats.league=Liga
+seasonstats.friendly=Venskabskampe
+seasonstats.cup=Cup
+seasonstats.masters=Masters
 
 #Newsfeed filter
+LeagueNewsFilter.label=Nyhedsfeed filter\:
+LeagueNewsFilter.all=Alle
+LeagueNewsFilter.friendlies=Venskabskampe & skiftet trænere
+LeagueNewsFilter.transfers=Transfers
+LeagueNewsFilter.lineupChanges=Opstillings ændringer
 
 #team pages
 sidebarBox.actions=Handlinger
@@ -308,6 +362,7 @@ MedianTransferPrice.average=Gennemsnits pris
 #forum
 AddLeaveConfButton.LeaveForum=Forlad forum
 AddLeaveConfButton.alert=Klik på knappen 'gem' på den næste side for at forlade denne konference.
+ShowForumPrefButton.forumPreferences=Forum indstillinger
 HideSignatures.signaturetoggle=Signatur
 MarkUnread.markunread=Markere som ulæst herfra
 EmbedMedia.EmbeddedImage=Integreret billede
@@ -343,6 +398,10 @@ ForumSpecialBBCode.forumSymbol=Indsæt "%s"
 ForumSpecialBBCode.symbols=Indsæt symbol\: %s
 
 #Transferlistfilters
+TransferSearchFilters.boxheader=FoxTrick filtre
+TransferSearchFilters.enterName=Angiv Filternavn\:
+TransferSearchFilters.deleteFilter.ask=Vil du slette dette filter?
+TransferSearchFilters.saveFilter=Gem ny filter
 
 #Filter
 Filters.addFilterOptions=Tilføj filterindstillinger
@@ -890,7 +949,7 @@ prefs.additional.HTMLDebugLog=Vis FoxTrick log, på bunden af sider (til fejlfin
 
 prefs.feedback.saved=Indstillinger gemt\!
 prefs.feedback.loaded=Indstillinger indlæst\!
-prefs.feedback.dismiss=(Klik for at afvise denne meddelelse)
+prefs.feedback.dismiss=(Klik for at skjule denne meddelelse)
 
 link.title=Links
 link.homepage=Hjemmeside
