--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -131,6 +131,8 @@ module.RatingsDisplay.DenominationsRange.desc=בדירוג מספרים בין 0
 
 # IN-GAME STRINGS. translate first
 
+#Series statistics
+
 #Save for work
 SafeForWork.title=כותרת
 SafeForWork.icon=סמל
