--- a/content/locale/zh-CN/foxtrick.properties
+++ b/content/locale/zh-CN/foxtrick.properties
@@ -52,7 +52,6 @@ module.TransferDeadline.desc=在转会截止期限旁边添加剩余时间
 module.HTDateFormat.desc=在 Hattrick 页面中最重要的日期旁添加全球/本国的赛季与周次
 module.HTDateFormat.LocalSeason.desc=显示本国赛季以替代全球赛季
 module.HTDateFormat.FirstDayOfWeekOffset.desc=自定义每周从哪一天开始 (0 \= 周一/默认, -2 \= 周六)
-module.TeamPopupLinks.desc=当悬停在一个球队的链接上时弹出一个快速链接的列表
 module.StaffMarker.desc=在论坛以及球队页面高亮官方工作人员的用户名.
 module.StaffMarker.manager.desc=在球队页面高亮
 module.StaffMarker.own.desc=自定义标记, 使用 JSON 格式, 以用户 ID 为键, 样式为值, 如 {"1001" \: "color\: red;", "1002" \: "background-color\: yellow;"}
@@ -246,6 +245,7 @@ module.LeagueNewsFilter.transfers.desc=仅显示转会
 module.LeagueNewsFilter.lineup_changes.desc=仅显示布阵改变
 #MoveManagerOnline
 module.MoveManagerOnline.desc=将地区页面中在线的经理向上移. 注意\! 如果超过100个玩家在线, 会很慢.
+module.TeamPopupLinks.desc=当悬停在一个球队的链接上时弹出一个快速链接的列表
 module.TeamPopupLinks.TeamLinks.desc=给球队链接添加 TeamPopupLinks
 module.TeamPopupLinks.UserLinks.desc=给经理链接添加 TeamPopupLinks
 module.TeamPopupLinks.Manager.desc=经理 (仅限于球队链接)
@@ -341,6 +341,8 @@ module.MobileEnhancements.desc=优化在移动设备上的显示
 
 
 # IN-GAME STRINGS. translate first
+
+#Series statistics
 
 #Save for work
 
