--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -276,6 +276,7 @@ module.LeagueNewsFilter.lineup_changes.desc=라인업 변경 이벤트만 보기
 #MoveManagerOnline
 module.MoveManagerOnline.desc=지역 페이지 위로 구단주 온라인을 이동. 경고\! 온라인 유저 리스트가 100명을 넘으면 매우 느립니다.
 module.TeamPopupLinks.desc=클럽id 링크로 마우스를 가져가면 작은 퀵링크 팝업창 표시
+module.TeamPopupLinks.OwnTeamHighlight.desc=테이블의 자신의 팀을 강조하기
 module.TeamPopupLinks.TeamLinks.desc=클럽 링크에 팝업 추가
 module.TeamPopupLinks.UserLinks.desc=구단주 링크에 팝업 추가
 module.TeamPopupLinks.Manager.desc=구단주 (클럽 링크 경우만)
@@ -382,6 +383,7 @@ module.Filter.desc=최고 선수 페이지에 필터 추가
 module.RatingsDisplay.desc=다른 스타일로 평균 레이팅 표시
 module.RatingsDisplay.DenominationsRange.desc=0-20 등급 범위
 module.RatingsDisplay.HatStats.desc=HatStats
+module.RatingsDisplay.HTSums.desc=Hattrick 레이팅 합계로서
 module.SafeForWork.desc=Hattrick 탭의 아이콘과 제목을 교체
 
 # -----------------------------------------------------------------------------
@@ -390,6 +392,7 @@ module.SafeForWork.desc=Hattrick 탭의 아이콘과 제목을 교체
 # IN-GAME STRINGS. translate first
 
 #Series statistics
+rating.average=평균 레이팅
 
 #Save for work
 SafeForWork.title=제목
