Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9180 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -276,7 +276,7 @@ module.LeagueNewsFilter.lineup_changes.desc=Прикажи само промен
 #MoveManagerOnline
 module.MoveManagerOnline.desc=На страници региона, пребацује на врх листе менаџере који су онлајн. Упозорење! Ова функција јако успорава учитавање странице ако у региону има више од 100 онлајн играча.
 module.TeamPopupLinks.desc=Приказује мали поп-ап прозор са пречицама када мишем пређете преко тимИД линка или надимка менаџера.
-module.TeamPopupLinks.OwnTeamHighlight.desc=Осенчи мој тим у свим табелама
+module.TeamPopupLinks.TeamHighlight.desc=Осенчи тим са линка у табелама
 module.TeamPopupLinks.TeamLinks.desc=Додаје TeamPopupLinks линковима ка клубовима.
 module.TeamPopupLinks.UserLinks.desc=Додаје TeamPopupLinks линковима ка менаџерима.
 module.TeamPopupLinks.Manager.desc=Линк до менаџера (само за линкове ка тиму).
