*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9182 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -187,6 +187,8 @@ module.MatchOrderInterface.Specialties.desc=Amosar especialidade dos xogadores
 #Extrashortcuts
 ExtraShortcuts.statistics=estatísticas
 ExtraShortcuts.transfers=traspasos
+ExtraShortcuts.ManageCHPP=Xestiona os teus productos CHPP
+ExtraShortcuts.prefs=Preferencias
 
 #HistoryStats
 
@@ -213,6 +215,9 @@ seasonstats.friendly=Amigables
 seasonstats.cup=Copa
 
 #Newsfeed filter
+LeagueNewsFilter.friendlies=Amigabeis e trocos de adestrador
+LeagueNewsFilter.transfers=Traspasos
+LeagueNewsFilter.lineupChanges=Trocos na aliñación
 
 #team pages
 sidebarBox.actions=Accións
@@ -361,9 +366,13 @@ match.role.captain=Capitán
 
 
 # SkillTable
+SkillTable.header=Táboa de habilidades
 SkillTable.switchView=Trocar vista
 SkillTable.addHomegrown=Engadir a fidelidade dos xogadores
 SkillTable.showTimeInClub=Mostrar tempo no club
+SkillTable.switchView.title=Trocar a vista da táboa.
+SkillTable.addHomegrown.title=Engade todos os xogadores da casa do actual primeiro equipo
+SkillTable.showTimeInClub.title=Amosa o tempo dende que se uniu ao primeiro equipo
 TSI.abbr=TSI
 Agreeability=Carácter
 Agreeability.abbr=Ca
@@ -390,6 +399,7 @@ Yellow_card.abbr=A
 Red_card=Cartón Vermello
 Red_card.abbr=V
 Speciality=Especialidade
+Last_stars_EndOfGame=Últimas estrelas amarelas
 #following string uses pluralForms
 Last_match_played_as_at=Xogou %1 min como %2 no último encontro, o %3.
 Salary=Salario
@@ -426,6 +436,8 @@ Bookmark.abbr=Fa
 Deadline=Data límite
 Deadline.abbr=Data límite
 
+skilltable.youthplayer=Xuvenil
+skilltable.rebought_youthplayer=Xuvenil recomprado
 
 #confirms
 ConfirmActions.bid=Estás seguro de querer poxar por este xogador? O seu prezo é de %s
@@ -459,6 +471,9 @@ copy.table=Copiar a tabla en HT-ML
 copy.playerad=Copiar un anuncio do xogador ao portapapeis
 copy.playerad.copied=Copiaches o anuncio deste xogador ao portapapeis
 copy.matchid=Fai click para copiar o matchID ao portapapeis
+copy.matchid.copied=O ID do partido foi copiado ao portatpeis.
+copy.skilltable.title=Copiar táboa de habilidades ao portapapeis (en formato HT-ML)
+copy.skilltable.copied=A táboa de habilidades foi copiada ao portapapeis.
 copy.postid=Copiar ao portapapeis
 copy.ratings.both=Copiar calificacións (en HT-ML)
 copy.ratings.home=Copiar calificacións locais (en HT-ML)
@@ -555,12 +570,14 @@ HTMSPoints.AbilityAndPotential=Habilidade\: %1/Potencial\: %2
 # CrossTable
 CrossTable.graph=Gráficos da tempada
 # will be shown as "R13" denoting round 13
+CrossTable.round=R%s
 CrossTable.noMatches=Aínda non se xogou ningún encontro.
 
 # MyMonitor
 MyMonitor.header=O meu monitor
 #following string uses pluralForms
 MyMonitor.add=Monitoriza este equipo
+MyMonitor.remove=Eliminar este equipo do meu monitor
 MyMonitor.removeTeam=Selecciona un equipo para borrar\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
 MyMonitor.removeTeamFormat=%n (%t, \#%i)
@@ -572,14 +589,18 @@ MyMonitor.type.nt=Nacional
 ticker.type.welcome=Mensaxe de benvida
 ticker.type.supporter=Un equipo do cal eres supporter, conectouse
 ticker.type.forum=Respostas na conferencia
+ticker.type.transfer=Información de traspasos
 ticker.type.challenge=Reto
 ticker.type.guestbook=Libro de visitas
 ticker.type.mail=Correo HT
+ticker.type.myht=As miñas mensaxes de Hattrick
 ticker.type.others=Outros
 
 # LocalTime
 LocalTime.hattrick=Hora Hattrick
+LocalTime.hattrick.title=Hora en horario Hattrick. Pulsa o reloxo para cambiar a horario de zona local.
 LocalTime.local=Hora local
+LocalTime.local.title=Hora en horario de zona local. Pulsa o reloxo para cambiar a horario de Hattrick.
 
 # fennec ui
 pageAction.rightMenu=Mostrar barra á dereita
